--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "astrotomic/laravel-translatable": "^11.15",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "mcamara/laravel-localization": "^2.0",
         "santigarcor/laratrust": "^8.3"
     },
     "require-dev": {
